@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2889 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2890 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -621,3 +621,5 @@ Changes from NetBSD 9.0 to NetBSD 10.0:
 		[christos 20220627]
 	uintuos(4): Add a driver for Wacom Intuos drawing tablets.
 		[yhardy 20220630]
+	installboot(8): Add -u option to set U-Boot search paths.
+		[brook 20220710]
